<resources>
    <string name="app_name">DigitalWallet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_text">User Name</string>
    <string name="password_text">Password</string>
    <string name="button_login_id">Log In</string>
    <string name="login">Log In</string>
    <string-array name="TargetDay">
        <item>1Month</item>
        <item>7Days</item>
        <item>15Days</item>
    </string-array>
    <string name="SetInitButton">Set</string>
    <string name="RefreshHome">Refresh</string>
    <string name="IncDecButton">IncDec</string>

    <string name="savechange">Change</string>
    <string name="AddMoneyButton">+</string>
    <string name="ExpenseButton">-</string>


    <string name="ProfileSetting">Profile Setting</string>
    <string name="ExpenseData">Expense Data</string>
    <string name="firstname"></string>
    <string name="firstnametext">First Name</string>
    <string name="firstname2"></string>
    <string name="firstnametext2">Last Name</string>
    <string name="firstnametext3">Gender</string>
    <string name="logout">Logout</string>
    <string name="password"></string>
    <string name="repassword"></string>
    <string name="passwordsave">Change Password</string>
    <string name="passwordtext">Password Change</string>

    <string name="goal">Goals</string>

    <string name="what_are_you_saving_for">What are you saving for?</string>

    <string name="some_things_people_save_for">Some things people save for:</string>

    <string name="name_text">Name</string>

    <string name="create_goal_btn">Create Goal</string>

    <string name="vehical_btn">Vehical</string>

    <string name="education_btn">Education</string>


    <string name="charity_btn">CHARITY</string>

    <string name="heading4">Name</string>

    <string name="target_amount">Target Amount</string>

    <string name="saved_already">Saved Already</string>

    <string name="desired_date">desired_date</string>
    <string name="newgoals">New Goals</string>


    <string name="signin">Sign In</string>
    <string name="signup">SignUp</string>
    <string name="register">Register</string>


    <string name="UserName">Digital Wallet</string>
    <string name="UserEmail">digitalwallet@gmail.com</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_goal_name">Enter Goal Name</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="done">Done</string>
    <string name="enter_saved_amount">Enter Saved Amount</string>
    <string name="View">view_button</string>
    <string name="view">View</string>
    <string name="enter_member_id">Enter Member ID</string>
    <string name="expense_name">Expense Name</string>
    <string name="enter_expense_amount">Enter Expense Amount</string>
    <string name="add_expense">Add Expense</string>
    <string name="view_expense">View Expense</string>
    <string name="add_expense_text">add_expense_text</string>
    <string name="add_expense_text1">Add Expense</string>
    <string name="create_group_text">Create Group</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="create_group_button">Create</string>
    <string name="enter_group_id1">Enter Group ID</string>
    <string name="view_group_btn">View</string>
    <string name="add_member_text">Add Members</string>
    <string name="enter_group_id">Enter Group ID</string>
    <string name="enter_member_name">Enter Member Name</string>
    <string name="add_member_btn">Add</string>

    //settings headers
    <!--    <string name="app_name">Settings</string>
    <string name="title_activity_settings">Settings</string>-->

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Settings</string>
    <string name="read">Read</string>
    <string name="display">..</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="view_member_btn">view</string>
    <string name="developers">Developers</string>
    <string name="amber_malik">Amber_Malik</string>
    <string name="text">2 Invite Friends and Family</string>
    <string name="text1">3 Sorting of income and Expense Accounts</string>
    <string name="_4_quick_add_widget">4 Quick Add Widget.</string>
    <string name="_1_transection_reminders">1 Transection Reminders.</string>
    <string name="text_view">New Features</string>
    <string name="aazka">Aazka Iqbal</string>
    <string name="sham">Sham Uz Zaman</string>
    <string name="ghulam">Ghulam Hussain</string>
    <string name="hassan">Hassan Azeem</string>

    <string name="current_balance_text">current_balance_text</string>
    <string name="income_button">income</string>
    <string name="expense_button">Expense</string>
    <string name="password1">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="pass">password</string>
    <string name="email">Email</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="your_goal_name">Your goal name</string>
    <string name="Ghulam">Ghulam</string>
    <string name="Hassan">Hassan</string>
    <string name="Aazka">Aazka</string>
    <string name="amber">Amber</string>
    <string name="shams">Shams</string>
    <string name="todo">TODO</string>


</resources>



