<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/desired_date"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/heading4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:gravity="center"
        android:text="@string/heading4"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/goal_text1"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="@android:color/black" />

    <EditText
        android:id="@+id/goal_text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_goal_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading4"
        tools:textColor="@android:color/black"
        tools:textColorHint="@android:color/black" />

    <TextView
        android:id="@+id/heading5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/target_amount"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/goal_text1"
        app:layout_constraintTop_toBottomOf="@+id/goal_text1"
        tools:textColor="@android:color/black" />

    <EditText
        android:id="@+id/target_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading5"
        tools:textColorHint="@android:color/black" />

    <TextView
        android:id="@+id/heading6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/saved_already"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/saved_already"
        app:layout_constraintTop_toBottomOf="@+id/target_amount" />

    <TextView
        android:id="@+id/heading7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="29dp"
        android:text="@string/desired_date"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saved_already" />

    <EditText
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_date"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading7"
        tools:textColorHint="@android:color/black" />

    <Button
        android:id="@+id/Done"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="16dp"
        android:text="@string/done"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/saved_already"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_saved_amount"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading6"
        tools:textColorHint="@android:color/black" />

    <Button
        android:id="@+id/view_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="16dp"
        android:text="@string/view"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>