<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".add_expense"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/add_expense_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="48dp"
        android:text="@string/add_expense_text1"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mem_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_member_id"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/add_expense_text"
        app:layout_constraintTop_toBottomOf="@+id/add_expense_text"
        tools:textColorHint="@android:color/black" />

    <EditText
        android:id="@+id/expense_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/expense_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/mem_Id"
        app:layout_constraintTop_toBottomOf="@+id/mem_Id"
        tools:textColorHint="@android:color/black" />

    <EditText
        android:id="@+id/expense_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_expense_amount"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/add_expense"
        app:layout_constraintStart_toStartOf="@+id/expense_name"
        tools:textColorHint="@android:color/black" />

    <Button
        android:id="@+id/add_expense"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="23dp"
        android:text="@string/add_expense"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/view_expense"
        app:layout_constraintStart_toStartOf="@+id/view_expense" />

    <Button
        android:id="@+id/view_expense"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        android:layout_marginBottom="42dp"
        android:text="@string/view_expense"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>